--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
 	"description": "Idea sharing app",
 	"main": "server.js",
 	"scripts": {
-		"start": "node server.js"
+		"start": "node server.js",
+		"dev": "nodemon server.js"
 	},
 	"author": "Kumanan",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.21.2"
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"mongoose": "^8.9.5"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.9"
 	}
 }
